# inferX

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
apps/api/: config.py  database.py  db_models.py  dependencies.py  logging_config.py  main.py  metrics.py  middleware.py  requirements.txt  store.py
apps/api/routers/: benchmarks.py  generate.py  models.py  requests.py  stream.py
apps/dashboard/: package-lock.json  package.json  tailwind.config.ts
apps/dashboard/src/app/: globals.css  layout.tsx
apps/dashboard/src/components/: Nav.tsx
apps/dashboard/src/hooks/: useBenchmarkPoll.ts  useStream.ts
configs/benchmark_suites/: batching_tradeoff.yaml  concurrency_scaling.yaml  default.yaml  model_comparison.yaml  model_comparison_large.yaml  output_length_sensitivity.yaml  prompt_length_sensitivity.yaml  streaming_vs_sync.yaml
configs/model_profiles/: echo.yaml  gpt-3.5-turbo.yaml  gpt-4o-mini.yaml  gpt-4o.yaml
infra/: docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml
infra/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.dashboard.dev  prometheus.yml
scripts/: api-dev.sh  dashboard-dev.sh
tests/: conftest.py
tests/eval/: test_placeholder.py
tests/integration/: test_benchmarks.py  test_generate.py  test_health.py  test_models.py  test_stream.py
tests/unit/: test_aggregator.py  test_suite.py  test_tracker.py
(+16 files in other folders)
