[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferx"
version = "0.1.0"
description = "Low-latency LLM inference and benchmarking platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "openai==1.51.0",
  "httpx==0.27.2",
  "asyncpg==0.29.0",
  "psycopg2-binary==2.9.9",
  "alembic==1.13.3",
  "sqlalchemy[asyncio]==2.0.36",
  "prometheus-fastapi-instrumentator==7.0.0",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.2",
]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "aiosqlite==0.20.0",
  "ruff==0.11.7",
  "mypy==1.15.0",
]

[tool.setuptools.packages.find]
include = ["alembic*", "apps*", "packages*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
explicit_package_bases = true
files = ["apps", "packages", "tests"]
